JSいいね欄挑戦中

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,11 +27,10 @@
 .quiz{
     background-color: azure;
 }
-.far-fa-thumbs-up{
+.fa-thumbs-up{
     margin: 10px;
 }
 
-=======
 .QA-section{
     text-align: center;
     overflow: auto;
