--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,10 @@
 .problem{
     text-align: justify;
     color: black;
-    border: 2px solid pink;
+    border: 4px solid pink;
     padding: 2em;
     border-radius: 15px;
+    background-color: white;
 }
 .title{
     text-align: center;
