--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@
     justify-content: space-between;
     align-items: center;
     height: 80px;
+    width: 100%;
 }
 
 
@@ -123,9 +124,10 @@
 /* メインビジュアル */
 
 .mainV {
-    height: 400px;
+    height: 600px;
     position: relative;
     background: #0071BC;
+    min-width: 540px;
 }
 
 .mainV-lead {
@@ -189,6 +191,7 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     background: #FFF;
     overflow: hidden;
+    margin-top: 12px;
 }
 
 .con-card-link {
