--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,23 @@ html{
     padding: 20px;
     font-weight: bold;
 }
+.text-lead{
+    text-align: center;
+    display: block;
+}
 .lead{
     text-align: center;
     display: block;
+    width: 200px;
+    margin: 10px 190px;
+    background-image: linear-gradient(to right, rgba(0,0,0,0) 50%, rgb(49 170 226) 50%);
+    background-position: 0 0;
+    background-size: 200% auto;
+    transition: .3s;
+}
+.lead:hover{
+    background-position:-100% 0;
+    color: #eff3f4;
 }
 .quiz{
     background-color: #eff3f4;
