--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,8 +269,35 @@ body{
 .header-navList {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    margin:0 0 50px 0;
+    list-style: none;
 }
 
+.header-navList li a{
+    position: relative;
+}
+.header-navList li a:hover{
+    color: #0481a2;
+}
+.header-navList li a::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    border-radius: 50%;
+    background: #0481a2;
+    transition: all .3s;
+    transform: scale(0.04,1);
+    transform-origin: center bottom;
+}
+.header-navList li a:hover::after{
+    height: 2px;
+    border-radius: 0;
+    transform: scale(0.8, 1);
+}
 .header-navLink {
     color: var(--primary-color);
     font-weight: bold;
